<resources>
    <string name="app_name">moodnotes</string>
    <string name="long_note">приготовить панкейки: 1 ст. кефира 1 шт. яйцо 2 ст. л. сахар 1 ст. муки 2 ст. л. масла</string>
    <string name="short_note">позвонить в деканат</string>
    <string name="mood_note">тревога</string>
    <string name="mood_note_time">10:49</string>
    <string name="home">Домой</string>
    <string name="diary">Дневник</string>
    <string name="tracker">Трекер</string>
    <string name="notes">Заметки</string>
    <string name="navigation">Навигация</string>
    <string name="note">Заметка</string>
    <string name="diary_note">запись в дневнике</string>
    <string name="tracker_notes">записи в трекере</string>
    <string name="notes_without_caps">заметки</string>
    <string name="date_example">1 января, пятница</string>
</resources>