<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:backgroundTint="@color/primary"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:navigationIcon="@drawable/ic_menu"
        app:navigationIconTint="@color/black"
        app:title="@string/app_name"
        app:titleTextColor="@color/black" />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.card.MaterialCardView
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="16dp"
        android:elevation="6dp"
        android:focusable="true"
        android:checkable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diary_note"
                android:fontFamily="@font/regular"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="16dp"
        android:elevation="6dp"
        android:focusable="true"
        android:checkable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracker_notes"
                android:fontFamily="@font/regular"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="16dp"
        android:elevation="6dp"
        android:focusable="true"
        android:checkable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes_without_caps"
                android:fontFamily="@font/regular"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
</layout>