<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:backgroundTint="@color/primary"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:navigationIcon="@drawable/ic_menu"
        app:navigationIconTint="@color/black"
        app:title="@string/app_name"
        app:titleTextColor="@color/black" />


    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?actionBarSize">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_date_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="2dp"
            android:focusable="true"
            android:checkable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:id="@+id/home_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 января, пт"
                    android:fontFamily="@font/regular"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_diary_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:focusable="true"
            android:checkable="true"

            android:layout_below="@id/home_date_card"
            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/home_diary_note_textview"
                    android:layout_width="353dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="Запись в дневнике"
                    android:textColor="@color/black"
                    android:textDirection="firstStrongLtr"
                    android:textSize="48sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_note_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        app:backgroundTint="@color/secondary"
        app:srcCompat="@drawable/ic_note"
        android:contentDescription="@string/fab_transformation_sheet_behavior"
        app:maxImageSize="50dp"
        app:fabCustomSize="64dp"
        android:tint="@color/black"
        android:elevation="8dp"
        app:layout_anchor="@id/home_diary_card"
        app:layout_anchorGravity="top|end|right"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_mood_note_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        app:backgroundTint="@color/secondary"
        app:srcCompat="@drawable/ic_mood_note"
        android:contentDescription="@string/fab_transformation_sheet_behavior"
        app:maxImageSize="50dp"
        app:fabCustomSize="64dp"
        android:tint="@color/black"
        android:elevation="8dp"
        app:layout_anchor="@id/home_diary_card"
        app:layout_anchorGravity="center|end|right"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_add_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        app:backgroundTint="@color/secondary"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/fab_transformation_sheet_behavior"
        app:maxImageSize="50dp"
        app:fabCustomSize="64dp"
        android:tint="@color/black"
        android:elevation="8dp"

        app:layout_anchor="@id/relative_layout"
        app:layout_anchorGravity="bottom|end|right"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingBottom="56dp"
        android:orientation="vertical"
        >

        <com.google.android.material.card.MaterialCardView
            android:backgroundTint="@color/primary_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="8dp"
            android:elevation="2dp"
            android:focusable="true"
            android:checkable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:id="@+id/long_note_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_note"
                    android:fontFamily="@font/regular"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <com.google.android.material.card.MaterialCardView
                android:backgroundTint="@color/secondary_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:elevation="2dp"
                android:focusable="true"
                android:checkable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    >

                    <TextView
                        android:id="@+id/short_note_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/short_note"
                        android:fontFamily="@font/regular"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:backgroundTint="@color/primary_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="8dp"
                android:elevation="2dp"
                android:focusable="true"
                android:checkable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    >

                    <TextView
                        android:id="@+id/mood_note_time_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mood_note_time"
                        android:fontFamily="@font/italic"
                        android:textSize="20sp"
                        android:layout_gravity="start"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:id="@+id/mood_note_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mood_note"
                        android:fontFamily="@font/regular"
                        android:textSize="20sp"
                        android:layout_gravity="start"
                        android:textColor="@color/black"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:menu="@menu/navigation_drawer"
        app:headerLayout="@layout/header_navigation_drawer"
        app:itemIconTint="@color/primary_light"
        />

</androidx.drawerlayout.widget.DrawerLayout>